# vms

./: .gitignore  BUILD_TEST_REPORT.md  CMakeLists.txt  DOCUMENTATION.md  LICENSE  README.md  SECURITY.md  build.sh
src/: main.cpp
src/core/: Visitor.cpp  Visitor.h  VisitorManager.cpp  VisitorManager.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/gui/: CheckInOutDialog.cpp  CheckInOutDialog.h  DashboardWidget.cpp  DashboardWidget.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  VisitorRegistrationDialog.cpp  VisitorRegistrationDialog.h
src/reports/: ReportManager.cpp  ReportManager.cpp.backup  ReportManager.h
src/security/: SecurityManager.cpp  SecurityManager.h
src/utils/: ConfigManager.cpp  ConfigManager.h  ErrorHandler.cpp  ErrorHandler.h  QRCodeGenerator.cpp  QRCodeGenerator.h
